syntax = "proto3";

option go_package = "github.com/joseMarciano/crypto-manager/withdraw";

message WithdrawRequest {
  string exchange_id = 1;
  string account_id = 2;
  double amount = 3;
}

message WithdrawResponse {
  string account_id = 1;
  double balance = 2;
}

service WithdrawHandler {
  rpc Execute (WithdrawRequest) returns (WithdrawResponse);
}